<resources>
    <string name="app_name">Wale音乐</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="account">用户名: </string>
    <string name="plesase_input_account">请输入用户名/账号</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="password">密码: </string>
    <string name="plesase_input_password">请输入密码</string>
    <string name="go_to_registe">注册账号</string>
    <string name="third_method_login"> 第三方账号登录 </string>
    <string name="if_login_is_meaning_to_geree">登录即表示您同意我们的</string>
    <string name="the_service">协议</string>
    <string name="iv_third_method1">iv_third_method1</string>
    <string name="iv_third_method2">iv_third_method2</string>
    <string name="iv_third_method3">iv_third_method3</string>
    <string name="iv_project_icon">iv_project_icon</string>
    <string name="tv_register">用户注册</string>
    <string name="tv_phone">电话号码</string>
    <string name="et_phone">请输入电话号码</string>
    <string name="bt_get_code">验证码</string>
    <string name="tv_code">验证码</string>
    <string name="et_code">请输入验证码</string>
    <string name="tv_name">昵称</string>
    <string name="et_name">请输入昵称</string>
    <string name="tv_gender">性别</string>
    <string name="et_gender">男或女n</string>
    <string name="tv_age">年龄</string>
    <string name="et_age">请输入年龄</string>
    <string name="tv_password">密码</string>
    <string name="et_password">请输入密码</string>
    <string name="et_password2">请再次输入密码</string>
    <string name="bt_register">注册</string>
    <string name="no_net_img">&#xe62d;</string>
    <string name="loading_img">&#xe68e;</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="about1">
        <div class="g-bd" id="j-root"><div class="m-app"><div class="m-service protocal-service"><h2>Wale音乐服务条款</h2><p class="f-fw1">更新日期：2020年6月17日</p><p class="f-fw1">生效日期：2020年6月17日</p><p></p><p>欢迎使用本为您提供的Wale音乐软件或服务。请您（下列简称为“用户”）仔细阅读以下全部内容<strong>（特别是粗体下划线标注的内容）</strong>。<span class="f-tdu f-fw1">如用户未满18周岁，或存在其他不具备与用户行为相适应的民事行为能力的情形，请用户在监护人的陪同下阅读本条款，并确保监护人同意其所有行为，在此情况下，用户及用户的监护人应依照法律规定承担因此而导致的一切后果。如用户对本条款的任何内容表示异议，或者无法准确理解本条款，请不要注册、登录Wale音乐或使用Wale音乐服务。如用户使用Wale音乐软件或服务，即表示用户与本已达成协议，自愿接受本条款所有内容。</span></p><h3>1、服务条款的确认和接纳</h3><p>本条款是用户与本之间关于用户使用Wale音乐软件或服务的条款，内容包括条款正文、<a class="tdu" href="https://reg.163.com/agreement_wap.shtml?20160825" target="_blank">《Wale邮箱账号服务条款》</a>、<a class="tdu" href="https://st.music.163.com/official-terms/privacy" target="_blank">《Wale音乐隐私政策》</a>及本已经发布的或将来可能发布/更新的各类规则。所有规则为本条款不可分割的组成部分，与条款正文具有同等法律效力。除另行明确声明外，用户使用Wale音乐软件或服务的行为将受本条款约束。</p><p>本条款如由于Wale音乐发展需要进行修订的，本将在Wale音乐平台公布。用户可前往查阅最新版协议条款。<span class="f-tdu f-fw1">在本修改上述条款后，如果用户不接受修改后的条款，用户可以选择终止使用Wale音乐软件或服务。用户继续使用的，将被视为已接受了修改后的条款。</span></p><h3>2、Wale音乐简介</h3><p>本条款所称的“Wale音乐”是指本所有和经营的专注于发现与分享的音乐产品，致力于为用户打造全新的音乐生活服务。</p><h3>3、账号管理规则</h3><p>3.1 用户通过Wale音乐可获取Wale音乐上的音乐、视频等内容，并可在登录后享受更为完整的服务，如创建歌单、发表评论等。用户登录帐号可以是用户本人的手机号、Wale邮箱帐号或Wale音乐增加的其他可登录帐号。如用户通过第三方账号登录Wale音乐的，其登录和使用行为同样适用本条款。</p><p>3.2 <span class="f-tdu f-fw1">用户使用的Wale音乐登录账号是本确认用户身份的唯一依据，用户应维持帐号及密码的机密安全，并对该账号进行的所有活动和行为负责，禁止赠与、借用、租用、转让或售卖账号。如果用户未保管好自己的帐号和密码而对用户、本或第三方造成损害，用户将负全部责任。用户同意若发现任何非法使用用户帐号或安全漏洞的情况，有义务立即通告本。</span></p><p><span class="f-tdu f-fw1">如本发现或者有合理理由认为账号使用者并非该帐号初始注册人，为保障帐号安全，本有权立即暂停或终止为该帐号提供服务，并有权封禁或注销、回收该帐号，由此带来的包括但不限于通讯中断、资料和虚拟财产清空等损失由该账号使用人、注册人自行承担。</span></p><p>3.3 <span class="f-tdu f-fw1">用户应在Wale音乐官方渠道注册账号。用户不得恶意注册帐号（包括但不限于频繁注册、批量注册、使用他人身份注册、恶意利用或破坏Wale音乐注册系统注册账号等）。任何通过非Wale音乐官方途径获得的账号（包括但不限于购买、借用、租用、分享等方式获得的账号），或恶意注册获得的账号，本有权进行封禁、注销或回收，如发生任何损失的，用户自行承担全部责任。</span></p><p>3.4 <span class="f-tdu f-fw1">为符合相关法律法规的要求，保障用户的账号安全，本可能会对用户的身份进行验证，包括但不限于要求输入验证码、手机号认证、邮箱认证等。如用户无法完成验证或拒绝验证的，本可合理怀疑用户的账号存在安全风险，暂停向用户提供部分或全部服务，并有权采取进一步措施。</span></p><p>3.5 <span class="f-tdu f-fw1">在法律法规允许的范围内，用户同意Wale音乐账号所有权，以及与注册、使用Wale音乐帐号相关的服务数据和记录，包括但不限于所有注册、登录、消费记录和相关的使用统计数据，归本所有。发生争议时，用户同意以本的系统数据为准，本应保证该数据的真实性。</span></p><p>3.6 用户在使用Wale音乐服务时填写、登录、使用的帐号名称、头像、个人简介等帐号信息资料应遵守法律法规、社会主义制度、国家利益、公民合法权益、公共秩序、社会道德风尚和信息真实性等七条底线，不得在帐号信息资料中出现违法和不良信息，不得冒用、关联机构或社会名人或采取其他足以让人引起混淆的方式注册账号。且用户保证在填写、登录、使用帐号信息资料时，不得有以下情形：</p><p>（1）反对宪法所确定的基本原则的；</p><p>（2）危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；</p><p>（3）损害国家荣誉和利益的；</p><p>（4）歪曲、丑化、亵渎、否定英雄烈士事迹和精神，以侮辱、诽谤或者其他方式侵害英雄烈士的姓名、肖像、名誉、荣誉的；</p><p>（5）宣扬恐怖主义、极端主义或者煽动实施恐怖活动、极端主义活动的；</p><p>（6）煽动民族仇恨、民族歧视，破坏民族团结的；</p><p>（7）破坏国家宗教政策，宣扬邪教和封建迷信的；</p><p>（8）散布谣言，扰乱经济秩序和社会秩序的；</p><p>（9）散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；</p><p>（10)侮辱或者诽谤他人，侵害他人名誉、隐私和其他合法权益的；</p><p>（11)含有法律、行政法规禁止的其他内容的。</p><p>3.7 <span class="f-tdu f-fw1">若用户在注册和使用Wale音乐账号时，存在任何违反法律法规或不符合本条款规定之行为，Wale音乐有权不予注册；已经注册的，本有权不通知用户而单方采取限期改正、短期封禁、永久封禁、注销、收回账号等措施，并有权向政府主管部门进行报告。</span></p><p>3.8 <span class="f-tdu f-fw1">用户充分理解并同意：在使用Wale音乐服务过程中，本可能会向用户展示本或其合作伙伴提供的广告或其他商业信息。本将按照法律规定履行广告及推广相关义务，用户应当自行判断该等信息的真实性和可靠性并为自己的判断行为负责。除法律法规明确规定外，用户因该等信息进行的购买或交易或因前述内容遭受的损害或损失，用户应自行承担，本不予承担责任。</span></p><p>3.9 本也为用户提供账号注销功能。用户可以登录Wale音乐官网https://music.163.com/，点击个人设置—绑定设置—进入注销流程，按照提示进行相应的操作。用户注销账号需要符合一定的条件，并遵守Wale音乐账号注销流程，具体请见《Wale音乐账号注销协议》（<a href="https://music.163.com/st/userbasic#/cancelaccount" target="_blank">https://music.163.com/st/userbasic#/cancelaccount）</a>。</p><p>在您的Wale音乐账号注销之后，我们将停止为您提供Wale音乐服务，请您谨慎操作。</p><h3>4、服务的变更或中止</h3><p>本始终在不断变更和改进服务。<span class="f-tdu f-fw1">本根据自身商业决策、政府行为、不可抗力等原因可能会选择中止、中断及终止Wale音乐的部分或全部服务。如有此等情形发生，本会采取公告的形式通知用户，但不承担由此对用户造成的任何损失。除法律法规另有明确规定的情形外，Wale音乐有权不经用户申请，直接向用户退还尚未履行的服务所对应的费用；如用户在Wale音乐产生收益，Wale音乐有权不经用户申请，直接按照相关规则为用户办理收益的提现。</span></p><h3>5、用户隐私制度</h3><p class="f-fw1 f-tdu">尊重用户隐私是本的一项基本政策。本将按照《Wale音乐隐私政策》（<a href="https://st.music.163.com/official-terms/privacy" target="_blank">https://st.music.163.com/official-terms/privacy</a>）收集、存储、使用、披露和保护用户的个人信息。请用户完整阅读上述隐私政策，以帮助用户更好地保护个人信息。未满十四周岁的用户，请通知监护人共同阅读<a href="https://st.music.163.com/official-terms/children" target="_blank">《Wale音乐儿童个人信息保护规则及监护人须知》</a>，并务必在使用Wale音乐服务、提交个人信息之前，寻求他们的同意和指导。</p><h3>6、责任限制</h3><p>6.1 <span class="f-fw1 f-tdu">用户理解并同意：关于Wale音乐服务，本不提供任何种类的明示或暗示担保或条件，包括但不限于商业适售性、特定用途适用性等。用户应对本服务的使用行为自行承担相应风险。</span></p><p>6.2 <span class="f-fw1 f-tdu">用户在使用Wale音乐服务中发布的任何内容、信息等并不反映或代表本的观点、立场或政策，本对此不承担任何责任。用户应对其他用户的内容自行加以判断，并承担因使用该内容而给自己、他人及社会造成的一切法律责任，包括但不限于因对内容的准确性、真实性、完整性或实用性等的依赖而产生的风险。</span></p><p>6.3 <span class="f-fw1 f-tdu">用户因系统停机维护、升级、调整，第三方原因如电信部门的通讯设备故障、计算机病毒或黑客攻击、技术问题、网络、电脑故障、系统不稳定性、台风、地震、海啸、洪水、停电、战争、恐怖袭击、政府管制及其他各种不可抗力原因而遭受的一切损失，本不承担责任；本对所有服务将尽力维护其安全性及方便性，但对服务中出现的信息（包括但不限于用户发布的信息）删除或储存失败不承担任何责任。因技术故障等不可抗事件影响到服务的正常运行的，本承诺在第一时间内与相关单位配合，及时处理进行修复，但用户因此而遭受的一切损失，本不承担责任。</span></p><p>6.4 <span class="f-fw1 f-tdu">任何情况下，本均不对任何间接性、后果性、惩罚性、偶然性、特殊性或刑罚性的损害承担责任。除法律法规另有明确规定外，本对用户承担的全部责任，无论因何原因或何种行为方式，始终不超过用户因使用Wale音乐而支付给本的费用（如有）。</span></p><p>6.5 <span class="f-fw1 f-tdu">为保证产品、服务的安全性及产品功能的一致性，本可能会对Wale音乐软件进行更新。用户应将软件更新到最新版本，如用户未及时更新到最新版本，本不保证用户一定能正常使用Wale音乐服务。</span></p><h3>7、禁止服务的商业化</h3><p>用户承诺，非经本同意，用户不能利用Wale音乐软件或服务进行销售或其他商业用途。如用户有需要将Wale音乐软件或服务用于商业用途，应书面通知本并获得本的明确授权。</p><h3>8、用户管理</h3><p>8.1 用户独立承担其在Wale音乐所发布内容的责任。用户对Wale音乐软件或服务的使用必须遵守所有适用于服务的地方法律、国家法律和国际法律。</p><p>8.2 用户在Wale音乐上发布信息或者使用Wale音乐的软件或服务时必须符合中国有关法规，不得利用Wale音乐软件或服务制作、复制、发布、传播法律、行政法规禁止的信息。用户同意并承诺不得制作、复制、发布含有下列内容的信息：</p><p>（1）反对宪法所确定的基本原则的；</p><p>（2）危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；</p><p>（3）损害国家荣誉和利益的；</p><p>（4）歪曲、丑化、亵渎、否定英雄烈士事迹和精神，以侮辱、诽谤或者其他方式侵害英雄烈士的姓名、肖像、名誉、荣誉的；</p><p>（5）宣扬恐怖主义、极端主义或者煽动实施恐怖活动、极端主义活动的；</p><p>（6）煽动民族仇恨、民族歧视，破坏民族团结的；</p><p>（7）破坏国家宗教政策，宣扬邪教和封建迷信的；</p><p>（8）散布谣言，扰乱经济秩序和社会秩序的；</p><p>（9）散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；</p><p>（10)侮辱或者诽谤他人，侵害他人名誉、隐私和其他合法权益的；</p><p>（11)炒作绯闻、丑闻、劣迹等的；</p><p>（12)不当评述自然灾害、重大事故等灾难的；</p><p>（13)带有性暗示、性挑逗等易使人产生性联想的；</p><p>（14)展现血腥、惊悚、残忍等致人身心不适的；</p><p>（15)煽动人群歧视、地域歧视等的；</p><p>（16)宣扬低俗、庸俗、媚俗内容的；</p><p>（17)可能引发未成年人模仿不安全行为和违反社会公德行为、诱导未成年人不良嗜好等的；</p><p>（18)散布商业广告，或类似的商业招揽信息、过度营销信息及垃圾信息；</p><p>（19)所发表的信息毫无意义的，或刻意使用字符组合以逃避技术审核的；</p><p>（20)其他违反法律、行政法规规定、对网络生态造成不良影响或干扰Wale音乐正常运营的内容。</p><p>8.3 用户不得利用基于深度学习、虚拟现实等的新技术新应用制作、发布、传播虚假新闻信息。用户在发布或传播利用基于深度学习、虚拟现实等的新技术新应用制作的非真实音视频信息时，应当以显著方式予以标识。</p><p>8.4 用户在Wale音乐上发布信息或者利用Wale音乐的软件或服务时还必须符合其他有关国家和地区的法律规定以及国际法的有关规定。</p><p>8.5 用户不得利用Wale音乐软件或服务实施以下行为：</p><p>（1）通过非本开发、授权或认可的第三方兼容软件、系统登录或使用Wale音乐软件或服务，或针对Wale音乐软件和相关服务使用非本开发、授权或认证的插件；</p><p>（2）删除Wale音乐软件及其他副本上所有关于版权的信息、内容；</p><p>（3）对Wale音乐软件进行反向工程、反向汇编、反向编译或以其他方式自Wale音乐软件获取源代码等；</p><p>（4）对于Wale音乐软件相关信息等，未经本同意，擅自实施包括但不限于下列行为：使用、出租、出借、复制、修改、链接、转载、汇编、发表、出版，建立镜像站点、擅自借助Wale音乐软件发展与之有关的衍生产品、作品、服务、插件、外挂、兼容、互联等；</p><p>（5）对使用Wale音乐软件或服务过程中释放到任何计算机或移动终端内存中的数据及软件运行过程中客户端与服务器端的交互数据进行复制、更改、修改；</p><p>（6）通过不正当手段或以违反诚实信用原则的方式（如利用规则漏洞、利用系统漏洞、滥用会员身份、黑色产业、投机等违背Wale音乐提供服务的初衷的方式）使用Wale音乐软件和服务；</p><p>（7）滥用Wale音乐软件或服务，包括但不限于利用Wale音乐软件或服务进行侵害他人知识产权或者合法利益；</p><p>（8）其他以任何不合法的方式、为任何不合法的目的、或以任何与本条款不一致的方式使用Wale音乐软件和服务。</p><p>8.6 用户应遵守本的所有其他规定和程序。用户须对自己在使用Wale音乐软件或服务过程中的行为承担法律责任。<span class="f-fw1 f-tdu">用户理解并同意，若用户违反以上任何规定，Wale有权作出独立判断立即暂停或终止对用户提供部分或全部服务，包括禁言、封禁用户账号、注销用户账号等措施，用户应自行承担自身损失（包括但不限于账户资料及虚拟财产清空等）以及一切相应法律责任。用户承担法律责任的形式包括但不限于：对受到侵害者进行赔偿，以及在本首先承担了因用户的行为导致的行政处罚或侵权损害赔偿责任后，用户应给予本等额的赔偿。</span></p><p class="f-fw1 f-tdu">用户理解，如果Wale发现用户发布的信息属于上述条款所列违规内容之一，依据相关法律规定，Wale有义务立即停止传输，保存有关记录，向国家有关机关报告。</p><h3>9、通知</h3><p>所有发给用户的通知都可通过电子邮件、常规的信件或在Wale音乐软件或Wale网站内显著位置公告的方式进行传送。本将通过上述方法之一将消息传递给用户，告知他们服务条款的修改、服务变更、或其它重要事情。</p><h3>10、内容、商标所有权</h3><p>Wale音乐软件或服务提供的内容包括但不限于：音频、视频、歌曲图文资料、歌曲列表、文字表述及其组合、界面设计、版面框架、图标、“Wale音乐”和“歌单”商标等。除涉及第三方授权的软件、技术及内容外，所有这些内容均属于本，并受中华人民共和国著作权法、商标法、专利法、反不正当竞争法和相应的国际条约以及其他知识产权法律法规的保护。所以，用户只能在本授权下才能使用这些内容，未经本书面同意，用户不能为任何营利或非营利性的目的擅自复制、再造这些内容、或创造与内容有关的派生产品、或以转让、许可的方式授权第三方实施、利用和转让上述知识产权。</p><p>本有权在服务中或经过服务在Wale音乐软件中投放各种广告和宣传信息。同时云音乐、Wale等本文中提及的软件和服务名称有可能为本或其关联公司的商标，未经本事先书面同意，用户不得以任何方式展示或使用或作其他处理，也不得向他人表明用户有权展示、使用、或其他有权处理的行为。</p><h3>11、信息储存及相关知识产权</h3><p class="str">本对Wale音乐软件上所有服务将尽力维护其安全性及方便性，但对服务中出现的信息（包括但不限于用户发布的信息、用户自主创立的歌单）删除或储存失败不承担任何责任。另外本有权判定用户的行为是否符合本条款的要求，如果用户违背了本条款的规定，本有权中止或者终止对提供其Wale音乐服务。</p><p class="f-fw1 f-tdu">本尊重知识产权并注重保护用户享有的各项权利。在Wale音乐软件所含服务中，用户可能需要通过发表评论等各种方式向本提供内容。在此情况下，用户仍然享有此等内容的完整知识产权。用户在提供内容时将授予本一项全球性的免费许可，允许本使用、传播、复制、修改、汇编、改编、再许可、翻译、创建衍生作品、出版、表演及展示此等内容。</p><h3>12、法律</h3><p class="f-fw1 f-tdu">本条款适用中华人民共和国的法律，并且排除一切冲突法规定的适用。</p><p class="f-fw1 f-tdu">如您在使用本条款项下服务中出现纠纷的，您同意将纠纷交由中国国际经济贸易仲裁委员会仲裁解决，并由3名仲裁员进行审理。仲裁裁决是终局的，对双方都有约束力。仲裁费用由败诉一方承担。</p><h3>13、其他</h3><p class="str">用户可通过本条款文末列明的客服邮箱投诉、举报各类违法违规行为，本将及时受理和处理用户的投诉举报。</p><p class="str">Wale音乐中的部分内容为用户自行上传，上传者对所上传的内容自行承担责任。如第三方主张上传的内容侵犯第三方权益的，用户可通过本条款文末列明的客服邮箱向本提供以下文件或信息。本会在收到上述文件或信息后经判断决定是否对涉嫌侵权的内容或链接进行处理：</p><p class="str">（1）要求处理的内容或链接</p><p class="str">（2）身份证明材料</p><p class="str">（3）联系方式和地址</p><p class="str">（4）可证明对内容享有权利的文件。</p><p>除非另有证明，本储存在其服务器上的数据是用户使用Wale音乐软件或服务的唯一有效证据。</p><p>本条款自发布之日起实施，并构成用户和本之间的共识。本不行使、未能及时行使或者未充分行使本条款或者按照法律规定所享有的权利，不应被视为放弃该权利，也不影响本在将来行使该权利。</p><p>如果用户对本条款内容有任何疑问，请发送邮件至我们的客服邮箱： ncm5990@163.com。</p></div></div></div><p class="f-hide">Wale音乐</p>
    </string>
</resources>